# zanin

./: .gitignore  README.md
firmware/: .clangd  .gitignore  CMakeLists.txt  Makefile  PLAN.md  README.md  main
firmware/main/: CMakeLists.txt  zanin-firmware.cpp
firmware/main/components/led/: led.cpp  led.h
firmware/main/components/mic/: example.cpp  mic.cpp  mic.h
firmware/main/components/sdcard/: sdcard.cpp  sdcard.h
firmware/main/components/wifi/: wifi.cpp  wifi.h
firmware/main/services/http/: http.cpp  http.h
firmware/main/services/sync/: file_tracker.cpp  file_tracker.h  sync_config.h  sync_service.cpp  (+1 more)
firmware/src/: main.cpp  main.h
web/: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  tsconfig.json
web/client/: .prettierignore  README.md  components.json  orval.config.js  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/client/src/: App.tsx  api.ts  env.ts  index.css  main.tsx  routes.gen.ts
web/services/agents/: Dockerfile  README.md  langgraph.json  package.json
web/services/api/: Dockerfile  README.md  langgraph.json  package.json  server.ts  tsconfig.json  tsoa.json
web/services/inngest/: README.md  app.ts  package.json
web/services/sid/: Dockerfile  README.md  pyproject.toml
web/services/sid/src/sid_service/: __init__.py  main.py
web/services/sid/src/sid_service/api/: __init__.py  dependencies.py  middleware.py
web/services/sid/src/sid_service/api/routes/: __init__.py  health.py  sid.py
web/services/sid/src/sid_service/core/: __init__.py  config.py
web/services/sid/src/sid_service/models/: __init__.py  requests.py  responses.py
web/services/sid/src/sid_service/services/: __init__.py  audio_utils.py  profile_store.py  speaker_encoder.py
web/services/vad/: Dockerfile  README.md  pyproject.toml
web/services/vad/src/vad_service/: __init__.py  main.py
web/services/vad/src/vad_service/api/: __init__.py  dependencies.py
web/services/vad/src/vad_service/api/routes/: __init__.py  health.py  vad.py
web/services/vad/src/vad_service/core/: __init__.py  config.py  logging.py
web/services/vad/src/vad_service/models/: __init__.py  requests.py  responses.py
web/services/vad/src/vad_service/services/: __init__.py  audio_decoder.py  vad_processor.py
web/services/vad/tests/: __init__.py  conftest.py  test_api.py  test_vad_processor.py
(+120 files in other folders)
