[project]
name = "vad-service"
version = "0.1.0"
description = "Voice Activity Detection service using silero-vad"
authors = [
    {name = "alpharaoh", email = "alpharaohh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

# Web Framework
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
python-multipart = "^0.0.12"

# Validation
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"

# VAD Processing
silero-vad = "^5.1"
numpy = "^2.0.0"
soundfile = "^0.12.1"

# Observability
structlog = "^24.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"
ruff = "^0.8.0"

[tool.poetry.scripts]
vad-service = "vad_service.main:run"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
